# GitScribe

./: .env.example  .gitignore  .gitscribe-context  README.md  pyproject.toml
src/git_scribe/: ai_ops.py  config.py  git_ops.py  main.py  ui.py
